--- a/MobileApp/manifest.json
+++ b/MobileApp/manifest.json
@@ -1,10 +1,10 @@
 {
     "name": "Green Crypto Mining",
     "short_name": "GCM",
-    "theme_color": "#3b454d",
-    "background_color": "#3b454d",
-    "display": "fullscreen",
+    "theme_color": "#141218",
+    "background_color": "#141218",
+    "display": "standalone",
     "orientation": "portrait",
     "scope": "/",
     "start_url": "/"
-  }
+}
